# ddd-fantasy-rpg-tg-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/ddd_fantasy_rpg/: console_demo.py
src/ddd_fantasy_rpg/application/: __init__.py  async_factories.py  factories.py
src/ddd_fantasy_rpg/application/events/: dispatcher.py
src/ddd_fantasy_rpg/application/formatters/: battle_formatter.py
src/ddd_fantasy_rpg/application/use_cases/: __init__.py  complete_battle.py  complete_expedition.py  complete_expediton_by_time.py  create_player.py  generate_events.py  get_active_expeditions.py  get_completed_expedition.py  match_pvp_expeditions.py  perform_battle_action.py  process_completed_expedition.py  start_battle.py  start_expedition.py
src/ddd_fantasy_rpg/bot/aiogram_bot/: background_tasks.py  battle_handlers.py  dependency_context.py  factories.py  handlers.py  keyboards.py  main.py  middlewares.py
src/ddd_fantasy_rpg/config/items/: consumables.yaml  weapons.yaml
src/ddd_fantasy_rpg/config/skillls/: warrior.yaml
src/ddd_fantasy_rpg/config/skills/: mage.yaml
src/ddd_fantasy_rpg/domain/: __init__.py  battle.py  battle_result.py  combatant_factory.py  exceptions.py  expedition.py  expedition_event_generator.py  item.py  monster.py  moster.py  notifications.py  player.py  random_provider.py  time_provider.py  unit_of_work.py
src/ddd_fantasy_rpg/infrastructure/: notifications.py  random.py  time.py  unit_of_work.py
tests/integration/: test_full_game_cycle.py
tests/unit/domain/: test_battle.py  test_item.py  test_player.py
(+93 files in other folders)
